<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/warning"
            android:textStyle="bold"
            android:layout_margin="10dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/red"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:layout_gravity="center"
            android:text="@string/delete_message"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            app:layout_constraintTop_toBottomOf="@+id/TextView">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/backup"
                android:clickable="true"
                android:background="@drawable/backup_note_state"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:textStyle="bold"
                android:id="@+id/backup"
                android:focusable="true" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/del_note_state"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:id="@+id/delete"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>