<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".AboutTheApp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@color/purple_mode"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/about_app"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textStyle="bold|normal" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/mylogo"
            android:layout_margin="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/aboutApp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:autoLink="email"
            android:clickable="true"
            android:focusable="true"
            android:gravity="start"
            android:linksClickable="true"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="gravity"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/purple_mode"
            android:text="@string/credit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|normal" />

        <TextView
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/attribution"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="normal" />

        <TextView
            android:text="@string/app_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:background="@color/purple_mode"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|normal" />

        <include
            layout="@layout/app_view" />
    </LinearLayout>


</ScrollView>