<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/tran"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/adds_bckg"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/TitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/note"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textFontWeight="1000"
            android:layout_margin="10dp"
            android:layout_marginTop="0dp"
            android:textColor="@color/red"
            android:textSize="18sp"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_gravity="center"
            android:text="@string/app_permission"
            android:textStyle="normal"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:targetApi="p" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/TextView">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/del_note_state"
                android:layout_height="wrap_content"
                android:text="@string/close"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:id="@+id/close"
                android:focusable="true" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:background="@drawable/del_note_state"
                android:layout_height="wrap_content"
                android:text="Permission"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                android:textSize="16sp"
                android:id="@+id/permission"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>